# mcp-forge

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
examples/weather_server/: pyproject.toml
examples/weather_server/src/weather_server/: __init__.py  resources.py  server.py  tools.py
src/mcp_forge/: __init__.py  __main__.py  cli.py  scaffold.py  tester.py  validator.py
src/mcp_forge/templates/: dockerfile.j2  init.py.j2  project_pyproject.toml.j2  project_readme.md.j2  resources.py.j2  server.py.j2  tools.py.j2
tests/: test_cli.py  test_cli_extended.py  test_cli_publish_test.py  test_edge_cases.py  test_inspect_info.py  test_integration.py  test_scaffold.py  test_scaffold_extended.py  test_tester.py  test_tester_extended.py  test_validator.py  test_validator_extended.py
