[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-forge"
version = "0.1.0"
description = "Scaffold, test, and publish Model Context Protocol (MCP) servers in seconds"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Manas Vardhan" }]
keywords = ["mcp", "model-context-protocol", "scaffold", "cli", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "rich>=13.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
publish = [
    "build>=1.0",
    "twine>=4.0",
]

[project.scripts]
mcp-forge = "mcp_forge.cli:cli"

[project.urls]
Homepage = "https://github.com/manasvardhan/mcp-forge"
Repository = "https://github.com/manasvardhan/mcp-forge"
Issues = "https://github.com/manasvardhan/mcp-forge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
