[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-server"
version = "0.1.0"
description = "An example MCP weather server built with mcp-forge"
license = "MIT"
requires-python = ">=3.10"

[project.scripts]
weather-server = "weather_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_server"]
